<resources>
    <string name="app_name">HIP</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="sign_in">Sign In</string>
    <string name="other">Other</string>
    <string name="new_visit">New Visit</string>
    <string name="injury_location_home">Home</string>
    <string name="header_diagnosis">Diagnosis</string>
    <string name="next">Next</string>
    <string name="header_injury_location">Injury Location</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="national">National</string>
    <string name="refugee">Refugee</string>
    <string name="revisit">Revisit</string>
    <string name="visit">Visit</string>
    <string name="create_new_visit">Enter Visit Record</string>
    <string name="choose_your_name">Choose your name</string>
    <string name="select_facility">Select your Health Centre</string>
    <string name="select_location">Select your Location</string>
    <string name="demographics">Demographics</string>
    <string name="dashboard">Dashboard</string>
    <string name="visit_summary">Visit Summary</string>
    <string name="visit_entry">Visit Entry</string>
    <string name="submit">Submit</string>
    <string name="sign_out">Sign Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- Start: Tool Tips -->
    <string name="tooltip_morbidity_revisit">"NOTE:
Refer to guidelines for definitions of New Visit and Revisit.
Only ONE visit record should be entered for each patient visit.
A patient with a ‘mixed’ presentation (i.e. diagnoses that fulfill New &amp; Revisit criteria) should be recorded as a NEW visit."</string>
    <string name="tooltip_morbidity_endocrine_metabolic">Includes Diabetes Mellitus</string>
    <string name="tooltip_morbidity_sti_contacts">Record the number of contacts treated for the primary patient. Also ensure a visit record is completed for each contact treated.</string>
    <string name="tooltip_opd_number">Enter patient OPD number if available</string>
    <string name="tooltip_injury_mode">Select both mode and location</string>
    <!-- End: Tool Tips -->
    <!-- Start: Prompts -->
    <string name="prompt_hiv">HIV Counsel needed.</string>
    <string name="prompt_assault">Advise patient to file police report.</string>
    <string name="prompt_outbreak_potential">Disease with outbreak potential. Refer to weekly alert thresholds.</string>
    <string name="prompt_threshold_reached">Weekly outbreak threshold reached.  Report to clinic supervisor.</string>
    <string name="edit">Edit</string>
    <!-- End: Prompts -->
    <string name="error_email_address">hip@medicalteams.org</string>
    <string name="consultation">Consultation</string>
    <string name="contacts_treated">Contacts Treated</string>
    <string name="error_status_type">You must select a Status type - National or Refugee</string>
    <string name="error_age">You must enter an age in years, months, and/or days.</string>
    <string name="error_age_range">Please enter an age between 1–150 years</string>
    <string name="error_age_range_months">Please enter an age between 1–24 months</string>
    <string name="error_visit_type">You must select a visit type - New Visit or Revisit</string>
    <string name="error_gender">You must select a Sex - Male or Female</string>
    <string name="powered_by">HIP powered by</string>
    <string name="edit_location_slash_name">Edit Location/Name</string>
    <string name="and">and</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="add_new_staff_member">Add New Staff Member</string>
    <string name="centre_instructions">Select your health centre from the list below by pressing on the item.</string>
    <string name="location_instructions">Select your location from the list below by pressing on the item.</string>
    <string name="staff_member_instructions">Select your name from the list below or press Add New Staff Member to add a new name.</string>
    <string name="last_used">Last Used</string>
    <string name="number_of_results">Number of Results</string>
    <!-- Connectivity status messages -->
    <string name="is_online">WIFI ON</string>
    <string name="is_offline">WIFI OFF</string>
    <string name="register_device">Register Device</string>
    <string name="start">Start</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_staff_member">Delete Staff Member?</string>
    <string name="want_to_remove_staff">Do you want to remove this staff member from the list?</string>
    <string name="your_name">Your name</string>
    <string name="okay">Okay</string>
    <string name="info">Info</string>
    <string name="errors_found">Errors found</string>
    <string name="ru_sure_u_wanna_delete_visit">Are you sure you want to delete this visit?</string>
    <string name="error">Error</string>
    <string name="request_2register_no_succeed">The request to register this device didn\'t succeed: Error data</string>
    <string name="updating_lists">Updating lists…</string>
    <string name="ur_device_disabled">Your device is currently disabled.</string>
    <string name="press_back_2_exit">Press back again to exit</string>
    <string name="uhave_sent">You have sent</string>
    <string name="today_period">today.</string>
    <string name="invalid_visit">Invalid visit</string>
    <string name="u_must_select_a_dx">You must select at least one diagnosis</string>
    <string name="plz_wait">Please wait…</string>
    <string name="version_code">Version: </string>
    <string name="no_network">No network</string>
    <string name="plz_connect2_internet_ntry_again">Please connect to the internet and try again</string>
    <string name="dx_summary">Diagnosis Summary</string>
    <string name="injury_location">Injury Location</string>
    <string name="ur_device_has_been_disabled">Your device has been disabled and will need to be activated by the administrator in order to process its visits.</string>
    <string name="some_recs_not_processed">Some records were not processed and will be resent during the next upload.</string>
    <string name="age">Age</string>
    <string name="days">Days</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="gender">Gender</string>
    <string name="staff_member">Staff member</string>
    <string name="center">Centre</string>
    <string name="not_recorded">Not recorded</string>
    <string name="consultation_summary">Consultation Summary</string>
    <string name="oops_something_wrong">Oops! Something went wrong.</string>
    <string name="send_report">Send Report</string>
    <string name="permissions_notice">Permissions notice</string>
    <string name="visit_list">List of Visits</string>
    <string name="visits_can_be_entered">Visits can be entered but they will not be submitted until the device has been activated by the device administrator.</string>
    <string name="no_of_contacts_treated">Number of Contacts Treated</string>
    <string name="plz_enter_dx_name">Please enter the name of your diagnosis</string>
    <string name="dx_name">Diagnosis name</string>
    <string name="search">Search</string>
    <string name="type_of_visit">"Type of Visit: "</string>
    <string name="visit_date">"Date of Visit: "</string>
    <string name="status">"Status: "</string>
    <string name="age_colon">"Age: "</string>
    <string name="sex_colon">"Sex: "</string>
    <string name="health_info_pgm">Health Information Program</string>
    <string name="sync_now">Sync Now</string>
    <string name="failed_to_retrieve_updated_lists">Failed to retrieve updated lists.</string>
    <string name="alerts">Alerts Summary</string>
    <string name="country_default">uga</string>
    <string-array name="country_array">
        <item>bgd:Bangladesh</item>
        <item>uga:Uganda</item>
        <item>usa:USA</item>
    </string-array>
    <plurals name="visitOrVisits">
        <item quantity="one">1 visit </item>
        <item quantity="other">%d visits </item>
    </plurals>
    <plurals name="sent_visits">
        <item quantity="other">You have saved and synced %d visits today.</item>
        <item quantity="one">You have saved and synced 1 visit today.</item>
    </plurals>
    <plurals name="failed_visits">
        X number of visits have been saved but have NOT yet been sent.  Please sync the visits.

        <item quantity="other">\n%d visits have been saved but have NOT yet been synced.\n
        Please sync the visits.</item>
        <item quantity="one">\n1 visit has been saved but has NOT yet been synced.\n
        Please sync the visits.</item>
    </plurals>
</resources>


