<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.mti.hip.DemographicEntryActivity">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/opd_number"
        android:hint="OPD Number"
        android:inputType="numberSigned"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <EditText
        android:inputType="numberSigned"
        android:hint="Age"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/patient_age"
        android:layout_below="@+id/opd_number"
        android:layout_marginTop="24dp" />
    <RadioGroup
        android:orientation="horizontal"
        android:layout_alignBottom="@id/patient_age"
        android:id="@+id/rg_years_or_months"
        android:layout_toRightOf="@id/patient_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="Years"
            android:id="@+id/rb_years"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="Months"
            android:id="@+id/rb_months"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <LinearLayout
    android:paddingRight="100dp"
    android:layout_width="match_parent"
    android:layout_below="@id/patient_age"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp">
    <RadioGroup
        android:orientation="horizontal"

        android:id="@+id/rg_national_refugee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/national"
            android:id="@+id/rb_national"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/refugee"
            android:id="@+id/rb_refugee"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <RadioGroup
        android:orientation="horizontal"

        android:id="@+id/rg_visit_revisit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/visit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"

            android:id="@+id/rb_visit"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/revisit"
            android:id="@+id/rb_revisit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <RadioGroup
        android:orientation="horizontal"

        android:id="@+id/rg_male_female"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/male"
            android:id="@+id/rb_male"
            android:layout_width="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/female"
            android:id="@+id/rb_female"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content" />
    </RadioGroup>
</LinearLayout>

</RelativeLayout>
