<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.mti.hip.DashboardActivity">

    <include layout="@layout/includeable_dev_mode"
        android:id="@+id/dev_mode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:layout_width="match_parent"
        android:padding="32dp"
        android:text="@string/health_info_pgm"
        android:id="@+id/logo"
        android:background="@color/colorPrimary"
        android:textColor="#FFF"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:textStyle="bold"
        android:textSize="@dimen/title_font"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/new_visit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/create_new_visit"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_tally_status"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="@dimen/body_font_medium"
        android:layout_centerInParent="true"
        />

    <TextView
        android:id="@+id/dashboard_connectivity_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tally_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/body_font_large"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:id="@+id/bt_manual_sync"
        android:drawableLeft="@drawable/ic_sync"
        android:text="@string/sync_now"
        android:gravity="center_vertical"
        style="@android:style/Widget.DeviceDefault.Button"
        android:drawablePadding="4dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/dashboard_connectivity_status"
        />
    <Button
        android:id="@+id/bt_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_poweredby"
        android:layout_alignParentRight="true"
        android:text="@string/edit_location_slash_name"
        android:layout_margin="@dimen/margin_large"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <include layout="@layout/includeable_powered_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
