<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.mti.hip.ConsultationActivity">

    <RelativeLayout
        android:id="@+id/rl_visit_labels"
        android:padding="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_label_visit_type"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Type of Visit: "
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_label_status"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Status: "
            android:layout_below="@id/tv_label_visit_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_label_age"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Age: "
            android:layout_below="@id/tv_label_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/patient_age"
            android:layout_width="64dp"
            android:maxLength="3"
            android:layout_alignBaseline="@id/tv_label_age"
            android:layout_toRightOf="@id/tv_label_age"
            android:layout_height="wrap_content"
            android:inputType="number" />


        <TextView
            android:id="@+id/tv_label_sex"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Sex: "
            android:layout_below="@id/tv_label_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_label_opd"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@id/tv_label_sex"
            android:text="OPD #: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/opd_number"
            android:layout_toRightOf="@id/tv_label_opd"
            android:layout_width="64dp"
            android:layout_alignBaseline="@id/tv_label_opd"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="260dp"
        android:layout_toRightOf="@id/rl_visit_labels"
        android:layout_height="wrap_content">


        <RadioGroup
            android:id="@+id/rg_visit_revisit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/visit"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioButton
                android:id="@+id/rb_revisit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/revisit"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_national_refugee"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_national"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/national"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioButton
                android:id="@+id/rb_refugee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/refugee"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_years_or_months"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_years"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Years"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioButton
                android:id="@+id/rb_months"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Months"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg_male_female"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_revisit_def"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/tooltip_morbidity_revisit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_consultation_debug"
        android:layout_above="@id/tv_revisit_def"
        android:text="Enable validation"/>
</RelativeLayout>
